--- a/farm-landing-page-master/index.html
+++ b/farm-landing-page-master/index.html
@@ -15,7 +15,7 @@
         <header>
             <nav class="header__nav w-120">
                 <div class="header__logo">
-                    <svg width="98" height="20" viewBox="0 0 98 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="200" height="50" viewBox="0 0 98 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M21.282 0.747999V19H16.836V8.054L12.754 19H9.166L5.058 8.028V19H0.612V0.747999H5.864L10.986 13.384L16.056 0.747999H21.282ZM28.8472 0.747999V11.668C28.8472 12.76 29.1159 13.6007 29.6532 14.19C30.1905 14.7793 30.9792 15.074 32.0192 15.074C33.0592 15.074 33.8565 14.7793 34.4112 14.19C34.9659 13.6007 35.2432 12.76 35.2432 11.668V0.747999H39.6892V11.642C39.6892 13.2713 39.3425 14.6493 38.6492 15.776C37.9559 16.9027 37.0199 17.752 35.8412 18.324C34.6799 18.896 33.3799 19.182 31.9412 19.182C30.5025 19.182 29.2112 18.9047 28.0672 18.35C26.9405 17.778 26.0479 16.9287 25.3892 15.802C24.7305 14.658 24.4012 13.2713 24.4012 11.642V0.747999H28.8472ZM59.1392 19H54.6932L47.2572 7.742V19H42.8112V0.747999H47.2572L54.6932 12.058V0.747999H59.1392V19ZM72.944 19L66.808 10.94V19H62.362V0.747999H66.808V8.756L72.892 0.747999H78.118L71.046 9.692L78.378 19H72.944ZM91.8529 15.776H85.0409L83.9489 19H79.2949L85.8989 0.747999H91.0469L97.6509 19H92.9449L91.8529 15.776ZM90.7089 12.344L88.4469 5.662L86.2109 12.344H90.7089Z" fill="#E19C59"/>
                     </svg>
                 </div>
@@ -45,24 +45,24 @@
 <!--                    </div>-->
                 </div>
 
-                <div class="hamburger-menu-wrap">
-                    <div class="hamburger-menu">
-                        <div class="line"></div>
-                        <div class="line"></div>
-                        <div class="line"></div>
-                    </div>
-                </div>
+<!--                <div class="hamburger-menu-wrap">-->
+<!--                    <div class="hamburger-menu">-->
+<!--                        <div class="line"></div>-->
+<!--                        <div class="line"></div>-->
+<!--                        <div class="line"></div>-->
+<!--                    </div>-->
+<!--                </div>-->
             </nav>
         </header>
 
         <section class="hero w-120">
             <div class="hero__content">
                 <div class="hero__text">
-                    <h1 class="hero__title">A New Way to Invest in Agriculture</h1>
+                    <h1 class="hero__title">Ищете работу в общепите?</h1>
                     <p class="hero__description">
-                        Zou provides farmes, ranchers, private foresters, and agricultural producers with online self service applications and educational materials.
+                        Наш новый Telegram-бот поможет вам найти идеальную работу в ресторанах, кафе и барах! Наша платформа разработана специально для быстрого и удобного поиска вакансий в сфере общественного питания.
                     </p>
-                    <a href="#" class="btn btn__hero">İnvest Now</a>
+                    <a href="#" class="btn btn__hero">Найти работу/сотрудника</a>
                 </div>
                 <div class="hero__img">
                     <img src="assets/img/hero2.jpg"  alt="">
@@ -74,30 +74,30 @@
 
             <div class="opportunities__content w-105">
                 <div class="opportunities__head">
-                    <h2 class="opportunities__title">New Opportunities</h2>
-                    <p class="opportunities__description">We are the first and the only crowdfunding platform enabling you to help finance our farmers.</p>
+                    <h2 class="opportunities__title">Почему мы?</h2>
+                    <p class="opportunities__description"></p>
                 </div>
                 <div class="opportunities__body">
                     <div class="opportunity">
                         <img src="assets/img/opportunites/opportunity-1.svg" alt="Icon" class="opportunity__icon">
-                        <h4 class="opportunity__title">Connect with our farmers</h4>
-                        <p class="opportunity__description">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                        <h4 class="opportunity__title">Быстрый поиск работы</h4>
+                        <p class="opportunity__description">Бот организует встречи с представителями компаний, упрощая процесс собеседования и трудоустройства
                         </p>
                     </div>
 
                     <div class="opportunity active">
                         <img src="assets/img/opportunites/opportunity-2.svg" alt="Icon" class="opportunity__icon">
-                        <h4 class="opportunity__title">Grow your business</h4>
+                        <h4 class="opportunity__title">Удобное создание резюме</h4>
                         <p class="opportunity__description">
-                            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+                             Встроенный редактор помогает создать профессиональное резюме с портфолио, привлекательное для работодателей
                         </p>
                     </div>
                     <div class="opportunity">
                         <img src="assets/img/opportunites/opportunity-3.svg" alt="Icon" class="opportunity__icon">
-                        <h4 class="opportunity__title">Social Impact Invesment
+                        <h4 class="opportunity__title">Прямое общение с работодателями
                         </h4>
                         <p class="opportunity__description">
-                            At vero eos et accusamus et iusto odio praesentium atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia
+                            Возможность перехода вашего общения в Telegram для большего удобства
                         </p>
                     </div>
                 </div>
@@ -107,47 +107,52 @@
         <section class="invest  w-105">
             <div class="invest__content">
                 <div class="invest__head">
-                    <h2 class="invest__title">Invest on your convenience</h2>
-                    <p class="invest__description">Autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur</p>
+                    <h2 class="invest__title">Что предлагает наш бот?</h2>
+                    <ul>
+                        <li class = "invest__description"><span>Удобный поиск вакансий: легко находите актуальные предложения работы по вашему городу.</span></li>
+                        <li class = "invest__description"> Простая регистрация: регистрируйтесь за несколько минут и начинайте искать работу прямо сейчас!</li>
+                        <li class = "invest__description"> Публикация вакансий для работодателей: ищете сотрудников? Размещайте объявления о вакансиях и находите подходящих кандидатов.</li>
+                    </ul>
+
                 </div>
-                <div class="invest__body">
-                    <div class="invest__item">
-                        <div class="invest__item__head">
-                            <h5 class="invest__item__subtitle">NEW FARM TODAY</h5>
-                        </div>
-                        <div class="invest__item__body">
-                            <h4 class="invest__item__title">Short terms investment</h4>
-                            <p class="invest__item_description">
-                                Invest in farms that will be ready for harvest in 3-18 months
-                            </p>
-                        </div>
-                        <div class="invest__item__footer">
-                            <a href="#" class="btn btn__invest">Browse Farm</a>
-                        </div>
-                    </div>
-                    <div class="invest__item">
-                        <div class="invest__item__head">
-                            <h5 class="invest__item__subtitle">FULLY FUNDED</h5>
-                        </div>
-                        <div class="invest__item__body">
-                            <h4 class="invest__item__title">Long terms investment
-                            </h4>
-                            <p class="invest__item_description">
-                                Consider farms that have long term investment program.
-                            </p>
-                        </div>
-                        <div class="invest__item__footer">
-                            <a href="#" class="btn btn__invest">Learn More</a>
-                        </div>
-                    </div>
-                </div>
+<!--                <div class="invest__body">-->
+<!--                    <div class="invest__item">-->
+<!--                        <div class="invest__item__head">-->
+<!--                            <h5 class="invest__item__subtitle">NEW FARM TODAY</h5>-->
+<!--                        </div>-->
+<!--                        <div class="invest__item__body">-->
+<!--                            <h4 class="invest__item__title">Short terms investment</h4>-->
+<!--                            <p class="invest__item_description">-->
+<!--                                Invest in farms that will be ready for harvest in 3-18 months-->
+<!--                            </p>-->
+<!--                        </div>-->
+<!--                        <div class="invest__item__footer">-->
+<!--                            <a href="#" class="btn btn__invest">Browse Farm</a>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="invest__item">-->
+<!--                        <div class="invest__item__head">-->
+<!--                            <h5 class="invest__item__subtitle">FULLY FUNDED</h5>-->
+<!--                        </div>-->
+<!--                        <div class="invest__item__body">-->
+<!--                            <h4 class="invest__item__title">Long terms investment-->
+<!--                            </h4>-->
+<!--                            <p class="invest__item_description">-->
+<!--                                Consider farms that have long term investment program.-->
+<!--                            </p>-->
+<!--                        </div>-->
+<!--                        <div class="invest__item__footer">-->
+<!--                            <a href="#" class="btn btn__invest">Learn More</a>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
         </section>
 
         <section class="how-is-works w-120">
             <div class="works__content">
                 <div class="works__head">
-                    <h2 class="works__title">How it works</h2>
+                    <h2 class="works__title">Как работает Munka</h2>
                     <p class="works__description">
                         Take your pick from the supply chain and participate in agribusiness projects that are backed up not only by Zou, but also by the best land, family heritage, innovation and overall superior expertise.
                     </p>
@@ -195,7 +200,7 @@
             <div class="testimonials__content">
                 <div class="testimonials__head w-105">
                     <img src="assets/img/quote.svg" alt="Quote" class="testimonials__quote">
-                    <h2 class="testimonials__title">What investors like you are saying about Zou</h2>
+                    <h2 class="testimonials__title">Наша команда</h2>
                 </div>
                 <div class="testimonials__body">
                     <div class="testimonials__list">
@@ -341,8 +346,8 @@
         </section>
 
         <section class="farm-invest w-105">
-            <h2 class="farm-invest__title">The future of <span>Farm Investing</span> is Zou</h2>
-            <a href="#" class="btn btn__farm--invest">Invest Now</a>
+            <h2 class="farm-invest__title"><span>MUNKA</span> делаем поиски приятным</h2>
+            <a href="#" class="btn btn__farm--invest">Найти работу/сотрудника</a>
 
         </section>
 
