--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <div class="works__head">
                     <h2 class="works__title">Как работает Munka</h2>
                     <p class="works__description">
-                        Take your pick from the supply chain and participate in agribusiness projects that are backed up not only by Zou, but also by the best land, family heritage, innovation and overall superior expertise.
+                        Главные преимущества нашего сервиса: понятность, удобный интерфейс и маленькое время поиска работы
                     </p>
                 </div>
                 <div class="works__body">
@@ -167,27 +167,27 @@
                 </div>
                 <div class="works__footer">
                     <div class="works__step__content first_step">
-                        <h3 class="works__step_title"> Select your farmshare and complete reservation form.</h3>
+                        <h3 class="works__step_title">Регистрация</h3>
                         <p class="works__step_description">
-                            Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere
+                            Создать анкету или вакансию в Munka занимает 5 минут из-за удобного и интуитивно понятного интерфейса
                         </p>
                     </div>
                     <div class="works__step__content">
-                        <h3 class="works__step_title"> Swallowed a planet!.</h3>
+                        <h3 class="works__step_title">Поиск</h3>
                         <p class="works__step_description">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda mollitia, voluptates obcaecati molestias quod velit!
+                            Ищите место работы мечты или превосходного сотрудника с помощью удобных гибких фильтров.
                         </p>
                     </div>
                     <div class="works__step__content">
-                        <h3 class="works__step_title">It's art! A statement</h3>
+                        <h3 class="works__step_title">Ожидание</h3>
                         <p class="works__step_description">
-                            Father Christmas. Santa Claus. Or as I've always known him: Jeff. Sorry, checking all the water in this area; there's an escaped fish. I hate yogurt. It's just stuff with bits in. Annihilate
+                            Ожидайте приглашения на собеседование или отклика сотрудника, но долго ждать не придется. Munka - это скорость.
                         </p>
                     </div>
                     <div class="works__step__content">
-                        <h3 class="works__step_title"> Register</h3>
+                        <h3 class="works__step_title"> Отклик</h3>
                         <p class="works__step_description">
-                            It's art! A statement on modern society, 'Oh Ain't Modern Society Awful?'! I am the Doctor, and you are the Daleks! Stop talking, brain thinking. Hush. You've swallowed a planet! Sorry, checking all the water in this area; there's an escaped fish.
+                            Найдите идеальную работу: используйте фильтры для поиска подходящих вакансий и отправляйте отклики.
                         </p>
                     </div>
                 </div>
